sort.basic.cocktail.AlgCocktailSort3.scala.error
Compilation error:
AlgCocktailSort3:21: error: not found: value int
    doneDroit=int(swappedDroit/2)+doneDroit-1
              ^